# Battery_Soc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.py
.ipynb_checkpoints/: run_pipeline-checkpoint.py
notebooks/: 01_EDA_and_Data_Prep.ipynb  02_OCV_Curve_Fitting.ipynb  03_Model_Evaluation.ipynb
notebooks/.ipynb_checkpoints/: 01_EDA_and_Data_Prep-checkpoint.ipynb  02_OCV_Curve_Fitting-checkpoint.ipynb  03_Model_Evaluation-checkpoint.ipynb
src/.ipynb_checkpoints/: data_ingestion-checkpoint.py  ecm_fitter-checkpoint.py  ocv_extractor-checkpoint.py  soc_estimator-checkpoint.py
