[project]
name = "battery-soc-modelling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "galvani>=0.5.0",
    "lmfit>=1.3.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "prog-models>=1.3.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
    "ipykernel",
    "nbconvert",
    "jupyterlab>=4.5.5",
]
